feat(comment): update createComment