@@ -30,6 +30,11 @@ import vn.socialmedia.service.PostService;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
+import static vn.socialmedia.enums.ErrorCode.NO_ACCESS_POST;
+import static vn.socialmedia.enums.PostPrivacy.FRIENDS_ONLY;
+import static vn.socialmedia.enums.PostPrivacy.PRIVATE;
 
 @Service
 @Slf4j(topic = "COMMENT_SERVICE")
@@ -50,11 +55,17 @@ public class CommentServiceImpl implements CommentService {
         Post post = postRepo.findById(request.getPostId()).orElseThrow(() ->
                 new BusinessException(ErrorCode.POST_NOT_FOUND, request.getPostId()));
 
-        if (!postService.canViewFriendOnlyPost(post) && !postService.canViewPrivatePost(post)) {
-            throw new BusinessException(ErrorCode.NO_ACCESS_POST, post.getId());
+        if (post.getPrivacy() == PRIVATE &&
+                !postService.canViewPrivatePost(post)) {
+            throw new BusinessException(NO_ACCESS_POST);
         }
 
-        Comment parent = new Comment();
+        if (post.getPrivacy() == FRIENDS_ONLY &&
+                !postService.canViewFriendOnlyPost(post)) {
+            throw new BusinessException(NO_ACCESS_POST);
+        }
+
+        Comment parent = null;
         if (request.getCommentParentId() != null) {
             parent = commentRepository.findById(request.getCommentParentId()).orElseThrow(() ->
                     new BusinessException(ErrorCode.COMMENT_NOT_FOUND, request.getCommentParentId(), request.getPostId()));
@@ -66,14 +77,33 @@ public class CommentServiceImpl implements CommentService {
         comment.setUser(user);
 
         commentRepository.save(comment);
+
+        List<String> receives = getNotificationCommentFollower(comment);
+
+        //broadcast comment to user
+        receives.forEach(receive -> broadcastComment(CommentResponse.builder()
+                        .id(comment.getId())
+                        .text(comment.getText())
+                        .user(CRUDUserResponse.builder()
+                                .id(user.getId())
+                                .name(user.getName())
+                                .avatarUrl(user.getAvatar())
+                                .build())
+                        .createdAt(comment.getCreatedAt())
+                        .build(),
+                post.getId(), receive));
+
+        //send realtime notification
+        String notifText = parent == null ? String.format("%s comment in your post", user.getName()) : String.format("%s replied to you in the post", user.getName());
         Notification notification = Notification.builder()
                 .type(NotificationType.COMMENT)
-                .text(user.getName() + " replied you in the post") //TODO fix message
+                .text(notifText)
                 .fromUser(user)
-                .targetType(NotificationTargetType.USER) //TODO fix target
-                .targetId(user.getId())
+                .targetType(NotificationTargetType.COMMENT)
+                .targetId(comment.getId())
                 .build();
-        notificationService.sendToUsers(getCommentFollower(comment), notification);
+
+        notificationService.sendToUsers(receives, notification);
     }
 
     @Override
@@ -126,11 +156,11 @@ public class CommentServiceImpl implements CommentService {
                 .build();
     }
 
-    private List<String> getCommentFollower(Comment comment) {
+    private List<String> getNotificationCommentFollower(Comment comment) {
         List<String> usernames;
         Comment parent = comment.getParentComment();
-        User owner = comment.getUser();
-        Predicate<User> notAuthor = u -> !u.equals(owner);
+        User commentOwner = comment.getUser();
+        Predicate<User> notAuthor = u -> !u.equals(commentOwner);
         //TODO add predicate blocked user
 
         if (parent == null) {
@@ -140,7 +170,13 @@ public class CommentServiceImpl implements CommentService {
                     .filter(notAuthor)
                     .map(User::getUsername)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList());
+
+            String postOwnerUsername = comment.getPost().getUser().getUsername();
+
+            if (!postOwnerUsername.equals(commentOwner.getUsername())) {
+                usernames.add(postOwnerUsername);
+            }
         } else {
             usernames = parent.getReplies().stream()
                     .map(Comment::getUser)
@@ -153,8 +189,7 @@ public class CommentServiceImpl implements CommentService {
         return usernames;
     }
 
-    private void broadcastPublicComment(CommentResponse response) {
-        //TODO check online user
-        messageTemplate.convertAndSend("/topic/comments");
+    private void broadcastComment(CommentResponse response, Long postId, String username) {
+        messageTemplate.convertAndSendToUser(username, "/topic/posts/" + postId + "/comments", response);
     }
 }
